<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#220000FF"
    android:padding="@dimen/margin_5dp">

    <Button
        android:id="@+id/btnInterMemo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_5dp"
        android:background="@color/btn1_bckgrnd"
        android:text="@string/save_internal_memory"
        android:textColor="@color/btn1_text_color" />

    <Button
        android:id="@+id/btnExternMemo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnInterMemo"
        android:layout_margin="@dimen/margin_5dp"
        android:background="@color/btn1_bckgrnd"
        android:text="@string/save_external_memory"
        android:textColor="@color/btn1_text_color" />

    <Button
        android:id="@+id/btnInsertDb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnExternMemo"
        android:layout_margin="@dimen/margin_5dp"
        android:background="@color/btn1_bckgrnd"
        android:text="@string/create_db"
        android:textColor="@color/btn1_text_color" />

    <Button
        android:id="@+id/btnQueryDb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnInsertDb"
        android:layout_margin="@dimen/margin_5dp"
        android:background="@color/btn1_bckgrnd"
        android:text="@string/create_query"
        android:textColor="@color/btn1_text_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/margin_5dp"
            android:layout_weight="4"
            android:hint="@string/edittext_hint" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#4400DD00"
            android:text="@string/OK"
            android:textColor="@color/txt_button_ok"
            android:textSize="22sp" />

    </LinearLayout>
</RelativeLayout>


